--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.2.1",
+    "jquery": "1.9.1",
     "particlesjs": "^2.2.3",
+    "popper.js": "1.14.6",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-particles-js": "^2.4.2",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "reactstrap": "^6.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
